heading and paragraph explained

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <!--this is how you include extrenal js -->
 </head>
 <body>
-    
+    <h1>Biggest Heading tag</h1>
+    <h6>Smallest Heading Tag</h6>
+    <p>Here you can write <strong>strong keyword</strong><br>break tag<hr>horizontal line tag<em>emphasis tag</em></p>
 </body>
 </html>
