anchor tag added and explained

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <!--  -->
@@ -14,9 +15,17 @@
     <script src="index.js"></script>
     <!--this is how you include extrenal js -->
 </head>
+
 <body>
     <h1>Biggest Heading tag</h1>
     <h6>Smallest Heading Tag</h6>
-    <p>Here you can write <strong>strong keyword</strong><br>break tag<hr>horizontal line tag<em>emphasis tag</em></p>
+    <p>Here you can write <strong>strong keyword</strong><br>break tag
+        <hr>horizontal line tag<br><em>emphasis tag</em>
+    </p>
+    <a href="http://www.google.com">google</a>
+    <a href="http://www.facebook.com" target="_blank" rel="noopener noreferrer">Facebook</a>
+    <!-- target blank open website in new tag -->
+    
 </body>
+
 </html>
