image tag added and explained

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     <a href="http://www.google.com">google</a>
     <a href="http://www.facebook.com" target="_blank" rel="noopener noreferrer">Facebook</a>
     <!-- target blank open website in new tag -->
-    
+    <br>
+    <img src="index.jpg" alt="image not loaded" width="" height="">
+    <!-- alt is used to display message when image doesnt load and you can set widht and height also -->
 </body>
 
 </html>
