list added and order and unorder explained

--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
     <br>
     <img src="index.jpg" alt="image not loaded" width="" height="">
     <!-- alt is used to display message when image doesnt load and you can set widht and height also -->
+    <br>
+    <ul>
+        <li>unordered list</li>
+    </ul>
+    <br>
+    <!-- unorder list uses buttons types -->
+    <ol>
+        <li>ordered list</li>
+    </ol>
+    <!-- ordered list uses number alpha as order -->
 </body>
 
 </html>
