table added and table head and table body explained

--- a/index.html
+++ b/index.html
@@ -29,15 +29,35 @@
     <img src="index.jpg" alt="image not loaded" width="" height="">
     <!-- alt is used to display message when image doesnt load and you can set widht and height also -->
     <br>
-    <ul>
+    <ul type="circle">
         <li>unordered list</li>
     </ul>
     <br>
     <!-- unorder list uses buttons types -->
-    <ol>
+    <ol type="A">
         <li>ordered list</li>
     </ol>
     <!-- ordered list uses number alpha as order -->
+    <br>
+    <table>
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Number</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Nitesh</td>
+                <td>704020</td>
+            </tr>
+            <tr>
+                <td>Hitesh</td>
+                <td>957999</td>
+            </tr>
+        </tbody>
+    </table>
+    <!-- thats how you create a table and mentioned table head and table body -->
 </body>
 
 </html>
