form added and explained

--- a/index.html
+++ b/index.html
@@ -58,6 +58,19 @@
         </tbody>
     </table>
     <!-- thats how you create a table and mentioned table head and table body -->
+    <br>
+    <form action="backend.php">
+        <input type="text">
+        <input type="email" value="email">
+        <input type="date">
+        <input type="checkbox">
+        <div>
+            Gender:Male<input type="radio" name="Gender" id="">
+            Female<input type="radio" name="Gender" id="">
+            <!-- both name should be same to use radio -->
+        </div>
+        <input type="button" value="Submit">
+    </form>
 </body>
 
 </html>
