--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
     <!-- thats how you create a table and mentioned table head and table body -->
     <br>
     <form action="backend.php">
-        <input type="text">
+        <label for="name">Name</label>
+        <input type="text" id="name">
+        <!-- by using label if you click on name you can start writing in name textarea -->
         <input type="email" value="email">
         <input type="date">
         <input type="checkbox">
