inline and block element explain

--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@
         </div>
         <input type="button" value="Submit">
     </form>
+    <br>
+    <span>this a inline element </span>
+    <span>span line element only takes required space .there are many iniine elements
+    </span>
+    <div>wheras block element takes full division.there are many block elements</div>
+    <br>
 </body>
 
 </html>
