classes and id explained

--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
     </span>
     <div>wheras block element takes full division.there are many block elements</div>
     <br>
+    <div class="class" id="id1">class can be multiple but id should be unique to edit in future</div>
+    <div id="id2">with unique id we can call or modify given tag without disturbing other</div>
 </body>
 
 </html>
